--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "cypress:build": "CYPRESS=true next build",
     "cypress:run": "TZ=UTC cypress run --headless --browser chrome"
   },
-  "author": "Siradji",
+  "author": "Suraj Auwal",
   "license": "ISC",
   "dependencies": {
     "classnames": "^2.3.1",
