--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@testing-library/cypress": "^8.0.2",
     "@types/node": "^17.0.8",
     "@types/react": "^17.0.38",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^4.33.0",
     "autoprefixer": "^10.4.2",
     "babel-plugin-istanbul": "^6.1.1",
@@ -43,6 +43,7 @@
     "eslint-config-standard-with-typescript": "^21.0.1",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.0.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.7",
     "postcss": "^8.4.5",
